--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 dependencies {
-    implementation("com.paymob.sdk:Paymob-SDK:1.3.1")
+    implementation("com.paymob.sdk:Paymob-SDK:1.5.3-alpha")
 }
 
 android {
